# django-logtailer

./: .gitignore  AUTHORS  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py  views.py
locale/en/LC_MESSAGES/: django.po
logtailer/: admin.py  apps.py  logtailer  models.py  urls.py  views.py
logtailer/locale/en/LC_MESSAGES/: django.mo  django.po
logtailer/locale/it/LC_MESSAGES/: django.mo  django.po
logtailer/migrations/: 0001_initial.py  0002_auto_20210430_0729.py  0002_auto_20210831_0738.py
logtailer/static/logtailer/css/: colorbox.css  logtailer.css
logtailer/static/logtailer/js/: init.js  jquery.colorbox-min.js  jquery.colorbox.js  logtailer.js  utils.js
logtailer/templates/admin/logtailer/logfile/: change_form.html
logtailer/templates/logtailer/: log_reader.html
logtailer/templates/logtailer/templatetags/: filters.html
logtailer/templatetags/: logtailer_utils.py
media/css/: colorbox.css
media/js/: init.js  jquery.colorbox-min.js  logtailer.js  utils.js
templatetags/: logtailer_utils.py
